--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -67,7 +67,7 @@
                     <label class="form__text" for="tyc">Acepto los términos y condiciones</label><br>
                     <input type="checkbox" name="noticias" checked>
                     <label class="form__text" for="noticias" >Acepto suscribirme al newsletter</label><br>
-                    <input class="submit_reset" type="reset" value="Limpiar">
+                    <input class="submit_resett" type="reset" value="Limpiar">
                     <input class="submit_reset" type="submit" value="Enviar">
                 </fieldset>
             </form>
