--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container-fluid">
         <header class="row sticky-top" >
             
-            <nav class="navbar navbar-dark bg-dark navbar-expand-lg navbar-expand-md row">
+            <nav class="navbar navbar-dark bg-dark navbar-expand-lg row">
                 <div class="container-fluid estilo__div">
                     <a class="navbar-brand logo__link col-lg-4 col-4 p-0 m-0 h-auto" href="index.html">
                         <img class="d-inline-block align-text-center logo__img img-fluid" src="./archivos/logo.jpg" alt="logo la inmobiliaria">
