--- a/pages/propiedades.html
+++ b/pages/propiedades.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
         <header class="row sticky-top" >
             
-            <nav class="navbar navbar-dark bg-dark navbar-expand-lg navbar-expand-md row">
+            <nav class="navbar navbar-dark bg-dark navbar-expand-lg row">
                 <div class="container-fluid estilo__div">
                     <a class="navbar-brand logo__link col-lg-4 col-4 p-0 m-0 h-auto" href="../index.html">
                         <img class="d-inline-block align-text-center logo__img img-fluid" src="../archivos/logo.jpg" alt="logo la inmobiliaria">
@@ -230,7 +230,7 @@
             <div class="footer__redes">
                 <h3 class="redes__title">LA INMOBILIARIA</h3>
             </div>
-            
+
             <div class="redes__redes">
                 <div class="redes">
                     <a href="https://facebook.com" target="_blank" class="redes__link">
