--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <link rel="stylesheet" href="./css/style2.css">
     
     <title>LA INMOBILIARIA</title>
-    <link rel="shortcut icon" href="../wireframe/archivos/btc.JPG">
+
+    <meta name="description" content="Encontra todas las casas en alquiler y venta en Zona Oeste en un solo lugar">
+
+    <meta name="keywords" content="casa chalet edificio Departamento 2 ambientes 3 ambientes monoambiente alquiler venta terreno">
+
+    <link rel="shortcut icon" href="./archivos/btc.jpg">
 </head>
 
 <body class="body">
@@ -19,7 +24,7 @@
             
             <nav class="navbar navbar-dark bg-dark navbar-expand-lg row">
                 <div class="container-fluid estilo__div">
-                    <a class="navbar-brand logo__link col-lg-4 col-4 p-0 m-0 h-auto" href="index.html">
+                    <a class="navbar-brand logo__link col-lg-4 col-md-4 col-sm-4 col-4 p-0 m-0 h-auto" href="index.html">
                         <img class="d-inline-block align-text-center logo__img img-fluid" src="./archivos/logo.jpg" alt="logo la inmobiliaria">
                         <p class="logo__title p-0 m-0">LA INMOBILIARIA</p>
                     </a>
