--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="../css/style2.css">
     
     <title>Contacto</title>
+
+    <meta name="description" content="Contactate con nosotros para una mejor atencion">
+
+    <meta name="keywords" content="casa chalet edificio Departamento 2 ambientes 3 ambientes monoambiente alquiler venta terreno">
+
 </head>
 <body class="body">
     <div class="container-fluid">
