--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="../css/style2.css">
     
     <title>Nosotros</title>
+
+    <meta name="description" content="Conoce mas sobre nosotros y nuestros valores">
+
+    <meta name="keywords" content="casa chalet edificio Departamento 2 ambientes 3 ambientes monoambiente alquiler venta terreno">
+
 </head>
 <body class="body">
     <div class="container-fluid">
